revamping hero text sizing on tablet/desktop to always fit, fixing LandingParagraph padding + max width

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,8 @@
 
 :root {
     --text-stroke-color: #d3d3d3;
-    --horizontal-scroll-speed: 50s;
+    /* --horizontal-scroll-speed: 50s; */
+    --horizontal-scroll-speed: 5s;
     /* --main-background-color: #233e29; */
     --main-background-color: #2f4734;
     --secondary-color: #d3d3d3;
